--- a/test/index.html
+++ b/test/index.html
@@ -41,6 +41,7 @@
             select[l].appendChild(option);
           }
         }
+        //列表末尾加号增加项目
         var main = document.getElementById("main");
         var plus = document.getElementById("plus");
         var skill = document.getElementById("s1");
